@@ -23,9 +23,9 @@ public class SortUserTest {
         User user = new User("Frank", 33);
         User user2 = new User("Victor", 25);
         User user3 = new User("Fedor", 15);
-        List<User> users = new ArrayList<>(Arrays.asList(user, user2, user3));
+        List<User> users = List.of(user, user2, user3);
         Set result = new SortUser().sort(users);
-        Set expect = new TreeSet(Arrays.asList(user3, user2, user));
+        Set expect = Set.of(user3, user2, user);
         assertThat(result, is(expect));
     }
 
@@ -39,9 +39,9 @@ public class SortUserTest {
         User user3 = new User("Fedor", 15);
         User user4 = new User("Ivan", 11);
         User user5 = new User("Petr", 30);
-        List<User> users = new ArrayList<>(Arrays.asList(user, user2, user3, user4, user5));
+        List<User> users = new ArrayList<>(List.of(user, user2, user3, user4, user5));
         List result = new SortUser().sortNameLength(users);
-        List expect = new ArrayList(Arrays.asList(user4, user5, user, user3, user2));
+        List expect = List.of(user4, user5, user, user3, user2);
         assertThat(result, is(expect));
     }
 
@@ -54,9 +54,9 @@ public class SortUserTest {
         User user2 = new User("Иван", 30);
         User user3 = new User("Сергей", 20);
         User user4 = new User("Иван", 25);
-        List<User> users = new ArrayList<>(Arrays.asList(user, user2, user3, user4));
+        List<User> users = new ArrayList<>(List.of(user, user2, user3, user4));
         List result = new SortUser().sortByAllFields(users);
-        List expect = new ArrayList(Arrays.asList(user4, user2, user3, user));
+        List expect = List.of(user4, user2, user3, user);
         assertThat(result, is(expect));
     }
 }
